# claferIG

./: .gitignore  CHANGES.md  Makefile  README  README.md  claferIG.cabal  stack.yaml
IDEs/: README.md  claferIG-README.md
lib/: minisatprover.md
src/: AlloyIGInterface.hs  ClaferIG.hs  ClaferModel.hs  CommandLine.hs  CommandLineParser.hs  Constraints.hs  JSONGenerator.hs  Main.hs  Process.hs  Solution.hs  Sugarer.hs  Version.hs  dateVer.hs  manifest
src-cmd/: Main.hs
src/Language/Clafer/IG/: AlloyIGInterface.hs  ClaferIG.hs  ClaferModel.hs  CommandLine.hs  CommandLineParser.hs  Constraints.hs  JSONGenerator.hs  Process.hs  Solution.hs  Sugarer.hs  Version.hs
src/edu/mit/csail/sdg/alloy4compiler/parser/: AlloyCompiler.java
src/org/clafer/ig/: AlloyIG.java  AlloyIGException.java  AlloyInterface.java  Util.java
test/: test-suite.hs
test/failing/positive/: i243.cfr
test/positive/: LTS.cfr  TeamLeaderMemberContractor.cfr  a2b3c4.cfr  i68-children-of-references.cfr  i74-abstract-clafers2.cfr  i77-too many instances generated.cfr  i83_individual-scope-should-never-be-smaller-than-the-global-scope.cfr  subclaferCardinality.cfr  waitingLine.cfr
test/suite/: BobsTeam.cfr  PersonFingers.cfr  backquoted.cfr  bitwidth.cfr  elevator.cfr  i220.cfr  i31_bitwidth.cfr  i68-children-of-references-simpler.cfr  i68-children-of-references.cfr  i74-abstract-clafers.cfr  i81_trivial_contradiction_undetected.cfr  inconsistent.cfr  trickyAlloyParens.cfr
tools/: Makefile
