Name:                claferIG
Version:             0.3.0.1
Synopsis:            claferIG is an interactive tool that generates instances of Clafer models.
Description:         Clafer instance generator (claferIG) is an API and an interactive tool that generates instances and counter examples of concrete clafers in a Clafer module. If the concrete clafers do not have contradicting constraints, the generator produces valid instance data. Otherwise, the generator produces a counter example that illustrates the constraint violation. The generator can potentially produce many instances if the concrete clafers are not fully specialized. The generator first returns the minimal instance and subsequently produces instances of increasing size, on-demand. The instance generator can also by used directly as an API (the command line and interactive session interfaces only use the API).
Homepage:            https://github.com/gsdlab/claferIG
License:             MIT
License-file:        LICENSE
Author:              Jimmy Liang
Maintainer:          jliang@gsd.uwaterloo.ca
Stability:           Experimental
Category:            Model
Build-type:          Simple
Cabal-version:       >=1.8

Executable claferIG
    Extensions:          DeriveDataTypeable
    Main-is:             Main.hs
    Build-depends:       base >= 4 && < 5, clafer == 0.3.0.1, cmdargs, containers, directory, executable-path, filepath, haskeline, HaXml, mtl, parsec, process, transformers
    Hs-Source-Dirs:      src  
